vercre-holder/tests/snapshots/preauth__credentials.snap
---
source: vercre-holder/tests/preauth.rs
assertion_line: 109
expression: credentials
---
- id: "http://vercre.io/credentials/EmployeeIDCredential"
  issuer: "http://vercre.io"
  vc:
    "@context":
      - "https://www.w3.org/2018/credentials/v1"
      - "http://vercre.io/credentials/v1"
    credentialSubject:
      address:
        locality: Wellington
        street_address: 123 Fake St
      email: normal.user@example.com
      family_name: Person
      given_name: Normal
      id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
    description:
      "@value": Vercre employee ID credential
      "@language": en-NZ
    id: "http://vercre.io/credentials/EmployeeIDCredential"
    issuer: "http://vercre.io"
    name:
      "@value": Employee ID
      "@language": en-NZ
    type:
      - VerifiableCredential
      - EmployeeIDCredential
    validFrom: "[validFrom]"
  issued: "[issued]"
  issuance_date: "[issuance_date]"
  display:
    - name: Employee ID
      locale: en-NZ
      logo:
        uri: "https://vercre.github.io/assets/employee.png"
        alt_text: Vercre Logo
      description: Vercre employee ID credential
      background_color: "#323ed2"
      background_image:
        uri: "https://vercre.github.io/assets/employee-background.png"
        alt_text: Vercre Background
      text_color: "#ffffff"
  logo:
    image: ""
    mediaType: ""
  background:
    image: ""
    mediaType: ""
